# ocr_utils

./: .gitignore  README.md  analyze_gigapixel.py  pyproject.toml
ocr_utils/: __init__.py  __main__.py  config.py  ocr.py  pdf_utils.py  pipeline.py  splitting.py
tests/: conftest.py  test_cli.py  test_config.py  test_ocr.py  test_pipeline.py  test_splitting.py
